<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HoSo_Activity">

    <ImageView
        android:id="@+id/imvShapeGreen"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_marginTop="-150dp"
        android:src="@drawable/green_br"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imvShapeGreen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imvShapeGreen"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        tools:layout_editor_absoluteX="1dp">

        <ImageButton
            android:id="@+id/imbtnBackHoso"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:backgroundTint="#34D16D"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.056"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txtHoSo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background=" #34D16D"
            android:gravity="center"
            android:text="Hồ sơ bệnh án"
            android:textColor="@color/black"
            android:textSize="28dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049"
            tools:layout_editor_absoluteX="1dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtInfoP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="Thông tin cá nhân"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imvShapeGreen" />

    <LinearLayout
        android:id="@id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/botronlayer"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/imvShapeGreen"
        app:layout_constraintTop_toBottomOf="@+id/txtInfoP"
        app:layout_constraintVertical_bias="0.0">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/imvThumbBV"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/blue_person"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp"
            app:civ_circle_background_color="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Họ tên:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Ngày sinh:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Giới tính:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Số điện thoại:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Địa chỉ:"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="Nguyễn Văn Anh"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/ngsinh"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/gioitinh"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/sdt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/diachi"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </LinearLayout>
    </LinearLayout>

    <TextView

        android:id="@+id/txtbenhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="Thông tin bệnh án"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TableLayout
        android:id="@+id/tbBenhAn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbenhan">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button

                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#34D16D"
                android:text="Mã BN"
                android:textSize="13sp">

            </Button>

            <Button
                android:layout_marginLeft="1dp"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#34D16D"
                android:text="Số BHYT"
                android:textSize="13sp">

            </Button>

            <Button
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#34D16D"
                android:text="BS thực hiện"
                android:textSize="13sp">

            </Button>

            <Button
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="#34D16D"
                android:text="Chẩn đoán"
                android:textSize="13sp">

            </Button>

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/tbMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="@color/white">
        <TableRow>

            <ImageButton
                android:id="@+id/imbtnHomePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"

                android:src="@drawable/home"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnLichKham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/lichkham_3"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnMaQR"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:background="#37D16D"
                android:src="@drawable/qrcode_1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnThongBao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/thongbao_4"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnTaikhoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_perm_identity_24"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trang_chu"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lich_kham"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thong_bao"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"
                android:layout_column="3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tai_khoan"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"
                />

        </TableRow>
    </TableLayout>
    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tbBenhAn"
        app:layout_constraintBottom_toTopOf="@id/tbMenu"
        android:textSize="20sp"
        android:text="không có thông tin để hiển thị"/>
</androidx.constraintlayout.widget.ConstraintLayout>