<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#34D16D"
    android:orientation="vertical">
    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imbtnHeart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:src="@drawable/icon_tim2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/txtSearch"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/nen_2"
                android:drawableLeft="@drawable/ic_baseline_search_24"
                android:hint="@string/timkiem"
                android:minHeight="48dp"
                android:textSize="20dp"
                app:layout_constraintLeft_toRightOf="@id/imbtnHeart"

                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imbtnUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:layout_constraintLeft_toRightOf="@id/txtSearch"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />
            <TextView
                android:id="@+id/txtChao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xin_chao"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imbtnHeart"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="50dp"/>
            <TextView
                android:id="@+id/txtNameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ten_nguoi_dung"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtChao"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="50dp"
                android:textStyle="bold"/>
            <ImageView
                android:id="@+id/imvDoctor"
                android:src="@drawable/icon_doctor"
                android:layout_width="150dp"
                android:layout_height="120dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtSearch"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="800dp"
                android:background="@drawable/nen_5"
                app:layout_constraintTop_toBottomOf="@id/imvDoctor"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"

                />

            <ImageButton
                android:id="@+id/imbtnBanner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:background="@null"
                android:src="@drawable/banner_2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imvDoctor"
                tools:ignore="SpeakableTextPresentCheck" />
            <TableLayout
                android:id="@+id/tbDichvuHepat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imbtnBanner1"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                >
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Dich vụ Hepat"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginLeft="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_span="4"/>
                </TableRow>
                <TableRow>

                    <ImageButton
                        android:id="@+id/imbtnDatLich"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="20dp"

                        android:layout_marginRight="20dp"
                        android:src="@drawable/datlich"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/imbtnTuVan"
                        android:layout_width="95dp"
                        android:layout_height="80dp"
                        android:layout_marginRight="20dp"

                        android:src="@drawable/tuvan"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/imbtnBenhAn"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginRight="20dp"

                        android:src="@drawable/benhan"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <ImageButton
                        android:id="@+id/imbtnDienDan"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/diendan"
                        tools:ignore="SpeakableTextPresentCheck" />

                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Đặt lịch"
                        android:textSize="16sp"
                        android:layout_gravity="center"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tư vấn"
                        android:textSize="16sp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="Bệnh án"
                        android:textSize="16sp"
                        android:layout_marginRight="18dp"
                        android:layout_marginLeft="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Điễn đàn"
                        android:textSize="16sp"

                        />
                </TableRow>
            </TableLayout>
            <TextView
                android:id="@+id/txtVeHepat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Về Hepeat"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tbDichvuHepat"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Xem thêm"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintTop_toBottomOf="@id/tbDichvuHepat"
                android:layout_marginTop="20dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="20dp"
                android:textColor="#37D16D"/>

            <ImageButton
                android:id="@+id/imbtnBanner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:src="@drawable/banner1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtVeHepat"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <TableLayout
        android:id="@+id/tbMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:background="@color/white">
        <TableRow>

            <ImageButton
                android:id="@+id/imbtnHomePage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:backgroundTint="#B5F4B7"
                android:src="@drawable/home"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnLichKham"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/lichkham_3"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnMaQR"
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:background="#37D16D"
                android:src="@drawable/qrcode_1"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnThongBao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/thongbao_4"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/imbtnTaikhoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:src="@drawable/ic_baseline_perm_identity_24"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trang_chu"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lich_kham"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thong_bao"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"
                android:layout_column="3"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tai_khoan"
                android:layout_gravity="center"
                android:textSize="13dp"
                android:layout_marginBottom="5dp"
                />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>